# rust_blog

./: .env  .gitignore  .gitjournal.toml  Cargo.toml  README.md  diesel.toml
migrations/2019-07-06-152206_init/: down.sql  up.sql
src/: database.rs  errors.rs  logger.rs  main.rs  schema.rs
src/api/: account.rs
src/applications/: mod.rs  schema.rs
src/applications/account/: handler.rs  model.rs
src/applications/auth/: mod.rs  permission.rs  service.rs
src/models/: account.rs  mod.rs  msg.rs  post.rs
src/services/: account.rs
src/utils/: config.rs  crypto.rs  errors.rs  logger.rs  mod.rs
