[package]
name = "rust_blog"
version = "0.0.1"
authors = ["Pengfei Tian <itsneo1990@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
actix = "0.8.3"
actix-rt = "0.2.5"
actix-web = "2.0.0"
actix-identity = "0.1.0"
actix-cors = "0.1.0"
diesel = { version = "1.4.2", features = ["postgres","chrono","serde_json","r2d2"] }
r2d2 = "0.8.8"
serde_derive="1.0.100"
serde_json="1.0.60"
serde="1.0.102"
jsonwebtoken = "6.0.1"

harsh = "0.1.6"
derive_more = "0.15.0"
regex = "1.3.1"
lazy_static = "1.4.0"
argonautica = "0.2.0"
chrono = { version = "0.4.9", features = ["serde"] }
log = "0.4.8"
fern = "0.5.8"
dotenv = "0.15.0"
num_cpus = "1.10.1"
